Draw board edge and empty blocks

--- a/nibobo/MainWindow.xaml
+++ b/nibobo/MainWindow.xaml
@@ -5,9 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:nibobo"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="800">
+        Title="MainWindow" Height="480" Width="850">
     <Grid>
-        <Canvas x:Name="BoardCanvas" HorizontalAlignment="Left" Height="560" Margin="400,10,0,0" VerticalAlignment="Top" Width="560">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="383*"/>
+            <ColumnDefinition Width="17*"/>
+        </Grid.ColumnDefinitions>
+        <Canvas x:Name="BoardCanvas" HorizontalAlignment="Left" Height="560" Margin="410,30,0,0" VerticalAlignment="Top" Width="560" Grid.ColumnSpan="2">
             <Canvas.RenderTransform>
                 <RotateTransform Angle="45"/>
             </Canvas.RenderTransform>
