--- a/nibobo/MainWindow.xaml
+++ b/nibobo/MainWindow.xaml
@@ -18,5 +18,8 @@
         </Canvas>
         <Button x:Name="ShowExampleBoard1" Content="Ex Board 1" HorizontalAlignment="Left" Height="30" Margin="687,61,0,0" VerticalAlignment="Top" Width="75" Click="ShowExampleBoard1_Click"/>
         <Button x:Name="ShowExampleBoard2" Content="Ex Board 2" HorizontalAlignment="Left" Height="30" Margin="687,96,0,0" VerticalAlignment="Top" Width="75" Click="ShowExampleBoard2_Click"/>
+        <Button x:Name="SolveBoard1" Content="Solve B1" HorizontalAlignment="Left" Height="30" Margin="687,131,0,0" VerticalAlignment="Top" Width="75" Click="SolveBoard1_Click"/>
+        <Button x:Name="SolveBoard2" Content="Solve B2" HorizontalAlignment="Left" Height="30" Margin="687,166,0,0" VerticalAlignment="Top" Width="75" Click="SolveBoard2_Click"/>
+        <TextBox x:Name="MsgBox" HorizontalAlignment="Left" Height="186" Margin="10,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="212"/>
     </Grid>
 </Window>
