--- a/nibobo/MainWindow.xaml
+++ b/nibobo/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:nibobo"
         mc:Ignorable="d"
-        Title="MainWindow" Height="840" Width="1024">
+        Title="nibobo solver" Height="840" Width="1024">
     <Grid>
         <Canvas x:Name="PuzzleCanvas" HorizontalAlignment="Left" Height="560" Margin="410,30,0,0" VerticalAlignment="Top" Width="560" Grid.ColumnSpan="2">
             <Canvas.RenderTransform>
